--- a/styles/animated-gradient.css
+++ b/styles/animated-gradient.css
@@ -1,27 +1,41 @@
 :root {
-    --gradient: linear-gradient(45deg,#F17C58, #E94584, #24AADB , #27DBB1,#FFDC18, #FF3706);
+  --gradient: linear-gradient(
+    to left top,
+    #d16ba5,
+    #c370b2,
+    #b276bc,
+    #9f7cc4,
+    #8b81c8,
+    #728cd4,
+    #5297db,
+    #23a1dd,
+    #00b3dd,
+    #00c3d1,
+    #00d0bb,
+    #61daa0
+  );
 }
 
 .gradient-animation {
-    background-size: 600%;
-    background-image: var(--gradient);
-    animation: bg-animation 90s infinite alternate;
+  background-size: 600%;
+  background-image: var(--gradient);
+  animation: bg-animation 90s infinite alternate;
 }
 
 @keyframes bg-animation {
-    0% {
-        background-position: 0;
-    }
-    100% {
-        background-position: 100%;
-    }
+  0% {
+    background-position: 0;
+  }
+  100% {
+    background-position: 100%;
+  }
 }
 
 @keyframes bg-animation {
-    0% {
-        background-position: 0;
-    }
-    100% {
-        background-position: 100%;
-    }
+  0% {
+    background-position: 0;
+  }
+  100% {
+    background-position: 100%;
+  }
 }
