--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@ Add the Google Fonts you want, remove the ones you don't.
 */
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@1,100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Maiden+Orange&display=swap");
 
 /*
 
@@ -29,6 +30,7 @@ Imported stylesheets. Remove the ones you do not want to use.
 @import url("text-stroke.css");
 @import url("stroke-shadow.css");
 @import url("scroll-to-top.css");
+@import url("image-slider.css");
 /*
 
 X-Small devices (portrait phones, less than 576px) 
@@ -69,10 +71,10 @@ html {
 /* Design variables refer to CSS variables that store specific design elements, such as colors and typography, which can be utilized throughout a website. Instead of individually modifying each CSS element, designers can quickly make changes by using design variables. Adjust the variables below, create new variables as desired, and delete the variables that you do not want to use. */
 
 :root {
-  --body-typeface: "Inter", sans-serif;
-  --heading-typeface: "Noto Sans", sans-serif;
-  --project-title-typeface: "Eczar", serif;
-  --background-color: #fdfdfd;
+  --body-typeface: "Noto Sans", sans-serif;
+  --heading-typeface: "Maiden Orange", serif;
+  --project-title-typeface: "Maiden Orange", serif;
+  --background-color: #ababab;
   --background-color-about: #f5f5f5;
   --background-color-footer: #f5f5f5;
   --alt-background-color: #000000;
@@ -83,7 +85,7 @@ html {
   --h4-color: #5200ff;
   --h5-color: #5200ff;
   --h6-color: #5200ff;
-  --primary-text-color: #222;
+  --primary-text-color: black;
   --holding-page-title-color: #ebedf0;
   --accent-color: #5200ff;
   --overlay-color: #5200ff;
@@ -181,9 +183,11 @@ h6 {
 }
 
 p {
-  font-size: 1rem;
+  font-size: 1.4rem;
   line-height: 1.3;
   margin-bottom: 1rem;
+  color: var(--primary-text-color);
+  font-weight: 600;
 }
 
 em {
@@ -316,6 +320,8 @@ a:active {
   justify-content: space-between;
   padding: 1rem;
   align-items: flex-start;
+  font-weight: 600;
+  font-size: 1.4rem;
 }
 
 .logo {
@@ -516,6 +522,7 @@ a:active {
   flex-direction: column;
   color: var(--project-sidebar-text-color);
   background: var(--project-sidebar-background-color);
+  font-weight: 600;
 }
 
 .project-navigation {
@@ -585,14 +592,7 @@ a:active {
   text-align: center;
   width: 100%;
   min-height: 100vh;
-  /* Delete the following if you do not want a grainy gradient background on the holding page */
-  background: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 1),
-      var(--background-color-holding-page)
-    ),
-    url(/assets/temp/noise.svg);
-  /* For more on grainy gradients see https://grainy-gradients.vercel.app/ */
+  color: var(--background-color);
 }
 
 .holding-page-animation {
@@ -819,7 +819,7 @@ a.sub-navigation-link:hover {
   }
 
   .logo {
-    width: 5rem;
+    width: 20rem;
   }
 
   .hero {
@@ -846,8 +846,9 @@ a.sub-navigation-link:hover {
   }
 
   .about {
-    padding: 4rem;
-    grid-template-columns: 1fr 1fr 1fr;
+    padding: 2rem;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 5fr 3fr 1fr;
   }
 
   .global-footer {
@@ -855,7 +856,7 @@ a.sub-navigation-link:hover {
     grid-template-columns: 1fr 1fr 1fr;
   }
 
-  .about-item-1 {
+  .about-picture {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
   }
@@ -865,9 +866,9 @@ a.sub-navigation-link:hover {
     grid-row: 1 / 2;
   }
 
-  .about-item-2 {
-    grid-row: 1 / 2;
+  .about-about-me {
     grid-column: 2 / 3;
+    grid-row: 1 / 2;
   }
 
   .footer-item-2 {
@@ -875,9 +876,9 @@ a.sub-navigation-link:hover {
     grid-column: 2 / 3;
   }
 
-  .about-item-3 {
-    grid-row: 1 / 2;
-    grid-column: 3 / 4;
+  .about-contact {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
   }
 
   .footer-item-3 {
@@ -885,9 +886,9 @@ a.sub-navigation-link:hover {
     grid-column: 3 / 4;
   }
 
-  .about-item-4 {
-    grid-row: 2 / 3;
-    grid-column: 1 / 4;
+  .about-fineprint {
+    grid-row: 3 / 4;
+    grid-column: 1 / 3;
     text-align: center;
     align-self: end;
   }
