--- a/styles/style.css
+++ b/styles/style.css
@@ -391,7 +391,6 @@ a:active {
   position: relative;
   /* Required to contain overlay size */
 }
-
 /* Overlay */
 .overlay {
   position: absolute;
@@ -548,6 +547,13 @@ a:active {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.project-image-descriptor {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.75rem;
 }
 
 .large-emoji-placeholder {
