--- a/styles/style.css
+++ b/styles/style.css
@@ -180,10 +180,11 @@ h6 {
   font-size: 1rem;
   margin-bottom: 1rem;
   color: var(--h6-color);
+  font-weight: 600;
 }
 
 p {
-  font-size: 1.4rem;
+  font-size: 1.25rem;
   line-height: 1.3;
   margin-bottom: 1rem;
   color: var(--primary-text-color);
@@ -480,18 +481,18 @@ a:active {
 }
 
 .footer-item-2 {
-  grid-column: 3 / 4;
+  grid-column: 1 / 2;
   grid-row: 3 / 4;
 }
 
 .footer-item-3 {
-  grid-column: 2 / 3;
+  grid-column: 1 / 2;
   grid-row: 2 / 3;
 }
 
 .footer-item-4 {
-  grid-column: 2 / 3;
-  grid-row: 1 / 4;
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
 }
 
 /* Project Page 
