--- a/styles/style.css
+++ b/styles/style.css
@@ -962,8 +962,12 @@ a.sub-navigation-link:hover {
 
 /*
 
-
-
+██      ██ ██ ██████  ███████  ██████      ██████  ██       █████  ██    ██ ███████ ██████
+ ██    ██  ██ ██   ██ ██      ██    ██     ██   ██ ██      ██   ██  ██  ██  ██      ██   ██
+  ██  ██   ██ ██   ██ █████   ██    ██     ██████  ██      ███████   ████   █████   ██████
+   ████    ██ ██   ██ ██      ██    ██     ██      ██      ██   ██    ██    ██      ██   ██
+    ██     ██ ██████  ███████  ██████      ██      ███████ ██   ██    ██    ███████ ██   ██
+    
 */
 
 .video-container {
