--- a/styles/style.css
+++ b/styles/style.css
@@ -686,6 +686,13 @@ a:active {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  background: linear-gradient(
+      135deg,
+      rgba(171, 171, 171, 1) 9%,
+      rgba(83, 83, 108, 1) 49%,
+      rgba(65, 78, 134, 1) 86%
+    )
+    fixed;
 }
 
 .error-page-wrapper {
